<resources>
    <string name="app_name">Mini-projet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_reservation">Reservation</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="welcome_img_desc">Welcome Logo</string>
    <string name="welcome_title">Welcome!</string>
    <string name="welcome_back_title">Welcome Back!</string>
    <string name="welcome_to_your_profile">Welcome to your profile</string>
    <string name="role">Role:</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="birth_date_yyyy_mm_dd">Birth Date (yyyy-MM-dd)</string>
    <string name="enter_your_birth_date">Enter your birth date</string>
    <string name="upload_image">Upload Image</string>
    <string name="save">Save</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="dashboard">Dashboard</string>
    <string name="product_name">Product Name</string>
    <string name="user_profile_image">User profile image</string>
    <string name="product_stock">product stock</string>
</resources>