<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="start"
    android:background="@drawable/dash_item_bg">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/prod_item_img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/default_user_profile"
            android:scaleType="centerCrop"
            android:contentDescription="@string/user_profile_image"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/prod_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-medium" />

        <TextView
            android:id="@+id/prod_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_stock"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-medium" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>